# telos

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CONTINUITY.md  HANDOFF.md  LICENSE  NOTICE  PREREGISTRATION.md  README.md  pyproject.toml  requirements-ci.txt
benchmarks/: CANDIDATES.md
docs/: ARCHITECTURE.md  COMPLETION_VERIFICATION_REPORT.md  CONTAINER_RUNNER_NOTES.md  EXPERIMENT_INDEX.md  FORENSIC-AUDIT-2026-07-16.md  HANDOFF-2026-07-18-iter231.md  HANDOFF-2026-07-18-iter232.md  HANDOFF-2026-07-18-iter233.md  HANDOFF-2026-07-18-iter234.md  HANDOFF-2026-07-18-iter235.md  HANDOFF-2026-07-18.md  HANDOFF-2026-07-19-iter237.md  HANDOFF-2026-07-19-iter238.md  HANDOFF-2026-07-19-iter239.md  HANDOFF-2026-07-19-iter240.md  HANDOFF-2026-07-19-iter241.md  HANDOFF-2026-07-21-iter242.md  HANDOFF-2026-07-22-iter243.md  HANDOFF-2026-07-22-iter245.md  HANDOFF-2026-07-24-iter246.md  LEARNING_ENGINE.md  LITERATURE_ALIGNMENT_2026.md  MISSION_LOOP.md  NEXT_PHASE.md  PAPER.md  PRESENTATION.md  RELATED_WORK.md  REPORT.md  TELOS-AUDIT-2026-07-19.md  TELOS-AUDIT-2026-07-21.md  TELOS-AUDIT-2026-07-22.md  TELOS-AUDIT-2026-07-24.md  TELOS-ROADMAP-2026.md
mission/: claim_registry.json  current.json  loop.json  seal_registry.json  workflow_registry.json
paper/: README.md  REWRITE_SPINE.md  telos.tex
protocol/: proof.schema.json
requirements/: iter200-swebench.txt
results/: README.md
scripts/: adjudicate_certified_resolved.py  adjudicate_iter194.py  adjudicate_iter195.py  adjudicate_iter197.py  adjudicate_iter199.py  adjudicate_iter200.py  adjudicate_iter201.py  adjudicate_iter203_safety_recovery.py  adjudicate_iter204_infrastructure_recovery.py  adjudicate_iter205_workflow_context_recovery.py  adjudicate_iter206_admission_history_recovery.py  adjudicate_iter207_claim_integrity_and_admission_recovery.py  adjudicate_iter231.py  adjudicate_iter232.py  adjudicate_iter234.py  adjudicate_iter241_repository_closure_correction.py  adjudicate_reward_hack_panel_full_cohort.py  adjudicate_reward_hack_panel_repair_execution.py  adjudicate_reward_hack_panel_result.py  (+485 more)
(+6152 files in other folders)
